[package]
name = "active-address"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.0", features = ["providers", "network", "primitives", "rpc"] }
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.10"
eyre = "0.6"
log = "0.4"
reqwest = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
