[package]
name = "active-address"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.12.6", features = ["providers", "network", "rpc"] }
alloy-primitives = "0.8.23"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.10"
eyre = "0.6"
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
rand = "0.9.0"
reqwest = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
